// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogSearchAPI Snapshots Returns consistent filter results 1`] = `
Array [
  "@aws-cdk/aws-backup@1.125.0",
  "@aws-cdk/aws-lambda-destinations@1.125.0",
  "@aws-cdk/aws-route53-patterns@1.125.0",
  "@aws-cdk/aws-ecs@1.125.0",
  "@aws-cdk/aws-apigatewayv2-authorizers@1.125.0",
  "@aws-cdk/aws-globalaccelerator-endpoints@1.125.0",
  "@aws-cdk/aws-dynamodb@1.125.0",
  "@aws-cdk/aws-ses@1.125.0",
  "@aws-cdk/aws-lambda-nodejs@1.125.0",
  "@aws-cdk/aws-kinesisfirehose@1.125.0",
  "@aws-cdk/aws-glue@1.125.0",
  "@aws-cdk/aws-servicecatalog@1.125.0",
  "@aws-cdk/aws-kinesis@1.125.0",
  "@aws-cdk/aws-synthetics@1.125.0",
  "@aws-cdk/aws-sqs@1.125.0",
  "@aws-cdk/aws-ecr-assets@1.125.0",
  "@aws-cdk/aws-ssm@1.125.0",
  "@aws-cdk/aws-ecr@1.125.0",
  "@aws-cdk/aws-workspaces@1.125.0",
  "@aws-cdk/aws-timestream@1.125.0",
  "@aws-cdk/aws-sso@1.125.0",
  "@aws-cdk/aws-securityhub@1.125.0",
  "@aws-cdk/aws-s3outposts@1.125.0",
  "@aws-cdk/aws-s3objectlambda@1.125.0",
  "@aws-cdk/aws-qldb@1.125.0",
  "@aws-cdk/aws-mediastore@1.125.0",
  "@aws-cdk/aws-mediapackage@1.125.0",
  "@aws-cdk/aws-medialive@1.125.0",
  "@aws-cdk/aws-mediaconnect@1.125.0",
  "@aws-cdk/aws-managedblockchain@1.125.0",
  "@aws-cdk/aws-location@1.125.0",
  "@aws-cdk/aws-iotwireless@1.125.0",
  "@aws-cdk/aws-iotcoredeviceadvisor@1.125.0",
  "@aws-cdk/aws-events@1.125.0",
  "@aws-cdk/aws-elasticbeanstalk@1.125.0",
  "@aws-cdk/aws-dms@1.125.0",
  "@aws-cdk/aws-dax@1.125.0",
  "@aws-cdk/aws-datasync@1.125.0",
  "@aws-cdk/aws-customerprofiles@1.125.0",
  "@aws-cdk/aws-codeguruprofiler@1.125.0",
  "@aws-cdk/aws-codeartifact@1.125.0",
  "@aws-cdk/aws-cloudwatch@1.125.0",
  "@aws-cdk/aws-ce@1.125.0",
  "@aws-cdk/aws-autoscalingplans@1.125.0",
  "@aws-cdk/aws-auditmanager@1.125.0",
  "@aws-cdk/aws-appstream@1.125.0",
  "@aws-cdk/aws-applicationinsights@1.125.0",
  "@aws-cdk/assets@1.125.0",
  "@aws-cdk/cx-api@1.125.0",
  "cdk-sns-notify@0.0.30",
  "cdk-tweet-queue@1.0.64",
  "cdk-alps-graph-ql@0.0.9",
  "gradle_s3_uploader@0.0.8",
  "cdk-mediapackage-custom@0.0.5",
  "cdk-noob@0.1.3",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk8s-aws-alb-ingress-controller@0.0.31",
  "cdk8s-plus@0.33.0",
  "cdk-iam-constants@0.0.5",
  "monocdk-experiment@1.66.0",
  "@rayou/cdk-url-shortener@0.1.2",
  "cdk-serverless-api@0.2.13",
  "cdk-stepfunctions-patterns@0.1.5",
  "aws-cdk-dynamodb-seeder@1.56.1",
  "@cdk-7layer-constructs/kinesis-firehose-transformer@0.1.36",
  "cdk-elasticache-monitor@0.0.13",
  "@taimos/cdk-construct-alexa-skill@1.1.0",
  "cdk-time-bomb@1.53.0",
  "cdk-athena-workgroup@1.0.0",
  "cdk-watchful-edge@0.6.1",
  "sqs-redrive@1.45.0",
  "cdk-github-import@1.0.0",
  "@philcali-cdk/static-website@0.0.2",
  "aws-lambda-golang@0.1.1",
  "cdk-time-bomb@0.0.1",
  "cdk-sqs-monitored@1.0.3",
  "@moralesl/billing-alert@0.4.0",
  "sqs-redrive-construct@0.1.1",
  "cdk-secrets@0.4.9",
  "@terrastack/core@0.15.0",
  "cicd-spa-website@0.1.2",
  "aws-cdk-featureflags@0.1.2",
  "nodejsfunction-plus@0.0.1",
  "secure-bucket@1.0.8",
  "cdk-cicd@0.1.3",
  "@taimos/cdk-construct-gitlab-variable@1.0.1",
  "cdk-iam-generator@1.0.4",
  "@taimos/cdk-construct-hosting@1.0.0",
  "cdk-constants@3.0.3",
  "@aws-cdk/cdk@0.36.1",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent query results 1`] = `
Array [
  "@aws-cdk/aws-lambda-nodejs@1.125.0",
  "aws-lambda-golang@0.1.1",
  "@aws-cdk/aws-lambda-destinations@1.125.0",
  "nodejsfunction-plus@0.0.1",
  "cdk-elasticache-monitor@0.0.13",
  "aws-cdk-featureflags@0.1.2",
  "aws-cdk-image-resize@0.0.18",
  "@aws-cdk/aws-ssm@1.125.0",
  "@aws-cdk/aws-appstream@1.125.0",
  "@aws-cdk/aws-mediastore@1.125.0",
  "@aws-cdk/aws-ecs@1.125.0",
  "@aws-cdk/aws-ecr@1.125.0",
  "@aws-cdk/aws-backup@1.125.0",
  "@aws-cdk/aws-mediapackage@1.125.0",
  "@aws-cdk/aws-dms@1.125.0",
  "@aws-cdk/aws-ce@1.125.0",
  "@aws-cdk/aws-workspaces@1.125.0",
  "@aws-cdk/aws-synthetics@1.125.0",
  "@aws-cdk/aws-s3objectlambda@1.125.0",
  "@aws-cdk/aws-cloudwatch@1.125.0",
  "@aws-cdk/aws-location@1.125.0",
  "@aws-cdk/aws-securityhub@1.125.0",
  "@aws-cdk/aws-timestream@1.125.0",
  "@aws-cdk/aws-sqs@1.125.0",
  "@aws-cdk/aws-datasync@1.125.0",
  "@aws-cdk/aws-codeguruprofiler@1.125.0",
  "@aws-cdk/aws-sso@1.125.0",
  "@aws-cdk/aws-codeartifact@1.125.0",
  "@aws-cdk/aws-elasticbeanstalk@1.125.0",
  "@aws-cdk/aws-applicationinsights@1.125.0",
  "@aws-cdk/aws-servicecatalog@1.125.0",
  "@aws-cdk/aws-medialive@1.125.0",
  "@aws-cdk/aws-dynamodb@1.125.0",
  "@aws-cdk/aws-s3outposts@1.125.0",
  "@aws-cdk/aws-dax@1.125.0",
  "@aws-cdk/aws-kinesisfirehose@1.125.0",
  "@aws-cdk/aws-qldb@1.125.0",
  "@aws-cdk/aws-customerprofiles@1.125.0",
  "@aws-cdk/aws-mediaconnect@1.125.0",
  "@aws-cdk/aws-iotwireless@1.125.0",
  "@aws-cdk/aws-events@1.125.0",
  "@aws-cdk/aws-kinesis@1.125.0",
  "@aws-cdk/aws-iotcoredeviceadvisor@1.125.0",
  "@aws-cdk/aws-auditmanager@1.125.0",
  "@aws-cdk/aws-ses@1.125.0",
  "@aws-cdk/aws-autoscalingplans@1.125.0",
  "@aws-cdk/aws-managedblockchain@1.125.0",
  "@aws-cdk/aws-glue@1.125.0",
  "cdk-constants@3.0.3",
  "@aws-cdk/aws-route53-patterns@1.125.0",
  "@pgarbe/cdk-bitbucket-server@0.1.1",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk8s-aws-alb-ingress-controller@0.0.31",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent sort results 1`] = `
Array [
  "@aws-cdk/assets@1.125.0",
  "@aws-cdk/aws-apigatewayv2-authorizers@1.125.0",
  "@aws-cdk/aws-applicationinsights@1.125.0",
  "@aws-cdk/aws-appstream@1.125.0",
  "@aws-cdk/aws-auditmanager@1.125.0",
  "@aws-cdk/aws-autoscalingplans@1.125.0",
  "@aws-cdk/aws-backup@1.125.0",
  "@aws-cdk/aws-ce@1.125.0",
  "@aws-cdk/aws-cloudwatch@1.125.0",
  "@aws-cdk/aws-codeartifact@1.125.0",
  "@aws-cdk/aws-codeguruprofiler@1.125.0",
  "@aws-cdk/aws-customerprofiles@1.125.0",
  "@aws-cdk/aws-datasync@1.125.0",
  "@aws-cdk/aws-dax@1.125.0",
  "@aws-cdk/aws-dms@1.125.0",
  "@aws-cdk/aws-dynamodb@1.125.0",
  "@aws-cdk/aws-ecr@1.125.0",
  "@aws-cdk/aws-ecr-assets@1.125.0",
  "@aws-cdk/aws-ecs@1.125.0",
  "@aws-cdk/aws-elasticbeanstalk@1.125.0",
  "@aws-cdk/aws-events@1.125.0",
  "@aws-cdk/aws-globalaccelerator-endpoints@1.125.0",
  "@aws-cdk/aws-glue@1.125.0",
  "@aws-cdk/aws-iotcoredeviceadvisor@1.125.0",
  "@aws-cdk/aws-iotwireless@1.125.0",
  "@aws-cdk/aws-kinesis@1.125.0",
  "@aws-cdk/aws-kinesisfirehose@1.125.0",
  "@aws-cdk/aws-lambda-destinations@1.125.0",
  "@aws-cdk/aws-lambda-nodejs@1.125.0",
  "@aws-cdk/aws-location@1.125.0",
  "@aws-cdk/aws-managedblockchain@1.125.0",
  "@aws-cdk/aws-mediaconnect@1.125.0",
  "@aws-cdk/aws-medialive@1.125.0",
  "@aws-cdk/aws-mediapackage@1.125.0",
  "@aws-cdk/aws-mediastore@1.125.0",
  "@aws-cdk/aws-qldb@1.125.0",
  "@aws-cdk/aws-route53-patterns@1.125.0",
  "@aws-cdk/aws-s3objectlambda@1.125.0",
  "@aws-cdk/aws-s3outposts@1.125.0",
  "@aws-cdk/aws-securityhub@1.125.0",
  "@aws-cdk/aws-servicecatalog@1.125.0",
  "@aws-cdk/aws-ses@1.125.0",
  "@aws-cdk/aws-sqs@1.125.0",
  "@aws-cdk/aws-ssm@1.125.0",
  "@aws-cdk/aws-sso@1.125.0",
  "@aws-cdk/aws-synthetics@1.125.0",
  "@aws-cdk/aws-timestream@1.125.0",
  "@aws-cdk/aws-workspaces@1.125.0",
  "@aws-cdk/cdk@0.36.1",
  "@aws-cdk/cx-api@1.125.0",
  "@cdk-7layer-constructs/kinesis-firehose-transformer@0.1.36",
  "@moralesl/billing-alert@0.4.0",
  "@pgarbe/cdk-bitbucket-server@0.1.1",
  "@philcali-cdk/static-website@0.0.2",
  "@rayou/cdk-url-shortener@0.1.2",
  "@taimos/cdk-construct-alexa-skill@1.1.0",
  "@taimos/cdk-construct-gitlab-variable@1.0.1",
  "@taimos/cdk-construct-hosting@1.0.0",
  "@terrastack/core@0.15.0",
  "@umlss/aws-cdk-serverless-timer@0.0.6",
  "aws-cdk-dynamodb-seeder@1.56.1",
  "aws-cdk-featureflags@0.1.2",
  "aws-cdk-image-resize@0.0.18",
  "aws-lambda-golang@0.1.1",
  "cdk-alps-graph-ql@0.0.9",
  "cdk-athena-workgroup@1.0.0",
  "cdk-cicd@0.1.3",
  "cdk-cloudfront-deploy@0.0.20",
  "cdk-constants@3.0.3",
  "cdk-elasticache-monitor@0.0.13",
  "cdk-github-import@1.0.0",
  "cdk-iam-constants@0.0.5",
  "cdk-iam-generator@1.0.4",
  "cdk-image-builder-patterns@0.0.11",
  "cdk-libs@0.1.24",
  "cdk-mediapackage-custom@0.0.5",
  "cdk-noob@0.1.3",
  "cdk-secrets@0.4.9",
  "cdk-serverless-api@0.2.13",
  "cdk-sns-notify@0.0.30",
  "cdk-sqs-monitored@1.0.3",
  "cdk-stepfunctions-patterns@0.1.5",
  "cdk-time-bomb@1.53.0",
  "cdk-time-bomb@0.0.1",
  "cdk-tweet-queue@1.0.64",
  "cdk-watchful-edge@0.6.1",
  "cdk-website@0.0.5",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk8s-aws-alb-ingress-controller@0.0.31",
  "cdk8s-op@0.1.0",
  "cdk8s-plus@0.33.0",
  "cicd-spa-website@0.1.2",
  "crossplane-cdk8s@0.1.13",
  "gradle_s3_uploader@0.0.8",
  "monocdk-experiment@1.66.0",
  "nodejsfunction-plus@0.0.1",
  "p82yf-libocr@0.0.22",
  "secure-bucket@1.0.8",
  "sqs-redrive@1.45.0",
  "sqs-redrive-construct@0.1.1",
]
`;
